5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4370/executions/1577_1332.log
== TEST (2019-03-18 18:54:52) 
-- CODE:
aresta =
area = 
 
print(round(3/2*(3)**0.5*5**2)
-- ERROR:
File "XXXX", line 1
    aresta =
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 18:55:30) 
-- CODE:

 
print(round(3/2*(3)**0.5*5**2)
-- ERROR:
File "XXXX", line 4
    
                                  ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 18:55:45) 
-- CODE:

 
print(round(3/2*(3)**0.5*5**2),4)
-- OUTPUT:
65 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 18:56:13) 
-- CODE:

 
print(round(3/2*(3)**0.5*5**2), 4)
		
-- OUTPUT:
65 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 18:57:26) 
-- CODE:

 
print(round(3/2*(3)**0.5*5**2), 4)
		
-- OUTPUT:
65 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 18:57:46) 
-- CODE:

 
print(round(3/2*(3)**0.5*5**2, 4))
		
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 18:58:14) 
-- CODE:

 
print(round(3/2*(3)**0.5*5**2, 4))
		
-- EXECUTION TIME:
0.221631
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
